[package]
authors = ["Atanas Dinov <atanas.dinov@suse.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

env_logger = "0.10.2"
log = "0.4.20"
network-interface = "1.1.1"
nmstate = { version = "2.2.17", features = ["gen_conf"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
